--- a/style.css
+++ b/style.css
@@ -1,57 +1,71 @@
 body {
-    background-image: linear-gradient(to right, rgb(253, 190, 190) , rgb(207, 207, 113));
+    /* background-image: linear-gradient(to right, rgb(28, 118, 146) , rgb(62, 186, 220)); */
+    background-color: #556832;
 }
 .photo {
     width:600px ; 
     left: 200px ; 
+    /* padding: 300px; */
+    margin-left: 450px;
+    margin-top: 240px;
     
    
 }
 
 .gamebutton:link, .gamebutton:visited {
-    width:260px ; 
+    width:300px ; 
     height: 130px;
-    background-color: #d88d1b;
+    background-color: #404040;
     color: white;
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    /* font-family: "Lucida Console", "Courier New", monospace; */
     position: absolute;
     top: 250px;
     left: 1400px;
+    font-size: 40px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
+
   .gitbutton:link, .gitbutton:visited{
-    width:260px ; 
+    width:300px ; 
     height: 130px;
-    background-color: #d88d1b;
+    background-color: #404040;
     color: white;
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-family: "Lucida Console", "Courier New", monospace;
     position: absolute;
     top: 500px;
     left: 1400px;
+    font-size: 40px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
   .pollbutton:link, .pollbutton:visited{
-    width:260px ; 
+    width:300px ; 
     height: 130px;
-    background-color: #d88d1b;
+    background-color: #404040;
     color: white;
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-family: "Lucida Console", "Courier New", monospace;
     position: absolute;
     top: 750px;
     left: 1400px;
+    font-size: 40px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
+
+
+
+
+
+  
 
 /* font-family: verdana;
   font-size: 20px;
