--- a/market.css
+++ b/market.css
@@ -1,6 +1,9 @@
 body{
+    font-family: sans-serif;
     background-color: antiquewhite;
-};
+    display: flex;
+    justify-content: center;
+}
 
 content {
     width: 800px;
@@ -9,14 +12,52 @@ content {
     justify-content: center;
     gap: 10px;
 
-};
+}
 
 div{
     border: 1px solid darkgrey ;
+}
+.title {
+    background:red ;
+    width: auto;
+    color: #ffffff;
+    padding: 10px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+    letter-spacing: 3px;
 }
 
 .items {
     padding: 10px;
     display: flex;
     gap: 20px;
+}
+.item {
+    width: 200px;
+    height: 320px;
+    margin-bottom: 10px;
+    border: 1px solid rgb(194, 194, 194);
+    border-radius: 5px;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
+
+}
+.contacts p {
+    margin: 3px;
+}
+
+.contacts p:first-child {
+    font-weight: bold;
+}
+
+.contacts p:last-child {
+    border-left: 3px solid red;
+}
+
+.license {
+    font-size: 9px;
+    text-align: justify;
+    color: rgb(120, 120, 120);
 }
