--- a/market.css
+++ b/market.css
@@ -10,11 +10,11 @@ body{
 }
 
 content {
-    width: 460px;
+    width: 580px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 10px;
+    gap: 40px;
 
 }
 
@@ -31,7 +31,7 @@ content {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
     color: #ffffff;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 30px;
     text-align: center;
     font-weight: bold;
     letter-spacing: 3px;
@@ -44,7 +44,7 @@ content {
 }
 /* блок окремого товару */
 .item {
-    min-width: 200px;
+    min-width: 150px;
     min-height: 400px;
     margin-bottom: 10px;
     padding: 10px;
@@ -65,7 +65,7 @@ content {
 
 /* блок зображення товару */
 .item-image {
-    height: 200px;
+    height: 260px;
    
     
 }
@@ -99,7 +99,7 @@ content {
 }
 
 .price div :first-child span {
-    text-decoration: line-through;
+    text-decoration-line: line-through;
 }
 
 .price div :first-child sup {
@@ -153,7 +153,7 @@ content {
 
 /* блок інформації */
 .info {
-    font-size: 9px;
+    font-size: 11px;
     text-align: justify;
     color: rgb(120, 120, 120);
 }
