--- a/final/final.css
+++ b/final/final.css
@@ -1,52 +1,44 @@
-body{
+body {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-
-    font-family: sans-serif; 
-    background-color: rgb(255, 255, 255);
+    font-family: 'Roboto', sans-serif;
+    background-color: #b4a7f7;
     display: flex;
     justify-content: center;
 }
 
 content {
-    width: 850px;
+    width: 1000px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 40px;
-
+    gap: 10px;
 }
 
-/* div{
-    border: 1px solid darkgrey ;
-} */
 .title {
     width: auto;
     padding: 10px;
     margin-top: 20px;
-    
-    background:red ;
+    background: rgb(101, 75, 205);
     border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
-    color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2), 0 6px 20px rgba(0,0,0,0.19);
+    color: white;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
     font-weight: bold;
     letter-spacing: 3px;
 }
-/* блок товарів */
 .items {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
-/* блок окремого товару */
+
 .item {
-    min-width: 150px;
-    min-height: 400px;
-    margin-bottom: 10px;
+    width: 1000px;
+    margin-bottom: 20px;
     padding: 10px;
     background-color: #ffffff;
     border: 1px solid rgb(194, 194, 194);
@@ -54,114 +46,44 @@ content {
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
+    align-items: left;
     justify-content: space-between;
-   
+    gap: 10px;
 }
-/* блок назва товару */
+
+.items p{
+    font-size: 25px;
+}
+
 .item-title {
     font-weight: bold;
+    font-size: 35px;
+    text-align: center;
 }
 
-
-/* блок зображення товару */
-.item-image {
-    height: 300px;
-    display: flex;
-    gap: 15px;
-   
-    
+img {
+    max-width: 45%;
+    height: 450px;
+    border-radius: 5px;
 }
 
-/* блок з оплатою частинами */
-.parts-pay {
-    margin-top: 30px;
+.links {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    justify-content: center;
+    width: 100%;
 }
 
-/* зображення, які знаходяться в блоці оплати частинами */
-.parts-pay img {
-    height: 24px;
-
-}
-
-/* блок ціни */
-.price{
-    border: 1px solid rgb(194, 194, 194);
+.links a {
+    background: #6b69d8;
+    color: white;
+    padding: 10px;
+    margin: 5px 0;
+    text-align: left;
+    text-decoration: none;
     border-radius: 5px;
-    padding: 5px 10px;
-    display: flex;
+    transition: background 0.3s;
 }
 
-.price div:first-child {
-    width: 100px;
-    font-size: 20px;
+.links a:hover {
+    background: #464ceb;
 }
-
-.price div :first-child span {
-    text-decoration-line: line-through;
-}
-
-.price div :first-child sup {
-    font-size: 12px;
-}
-
-.price div:last-child {
-    font-size: 24px;
-}
-.price div:last-child sup {
-    font-size: 14px;
-}
-
-/* блок бонусної ціни */
-.bonus {
-    background: red ;
-    color: #ffffff;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-}
-
-.bonus div:first-child {
-    width: 100px;
-    font-size: 14px;
-}
-
-.bonus:last-child {
-    font-size: 24px;
-}
-
-.bonus:last-child sup {
-    font-size: 14px;
-}
-
-
-/* блок контактів */
-
-.contacts p {
-    margin: 3px;
-}
-
-.contacts p:first-child {
-    font-weight: bold;
-    letter-spacing: 1px;
-}
-
-.contacts p:last-child {
-    border-left: 3px solid red;
-}
-
-/* блок інформації */
-.info {
-    font-size: 11px;
-    text-align: justify;
-    color: rgb(120, 120, 120);
-}
-
-/* .license {
-    font-size: 9px;
-    text-align: justify;
-    color: rgb(120, 120, 120);
-} */
